# Keyboard-TestKit

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EVALUATION.md  Makefile  PLAN.md  README.md  REMEDIATION_PLAN.md  Readme.md  SECURITY.md  SPEC.md  VIBE_CHECK_REPORT.md  build.sh  claude.md  run.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs  mapper.rs  report.rs  utils.rs
src/keyboard/: evdev_listener.rs  event.rs  keymap.rs  layout.rs  mod.rs  remap.rs  state.rs
src/tests/: bounce.rs  latency.rs  mod.rs  oem_keys.rs  polling.rs  rollover.rs  shortcuts.rs  stickiness.rs  test_helpers.rs  virtual_detect.rs
src/ui/: app.rs  keyboard_visual.rs  mod.rs  theme.rs  widgets.rs
tests/: integration.rs
