[package]
name = "keyboard-testkit"
version = "0.1.0"
edition = "2021"
authors = ["Keyboard TestKit Contributors"]
description = "Portable keyboard testing and diagnostic utility"
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Keyboard input handling
device_query = "2.1"

# Time and duration handling
chrono = "0.4"

# Serialization for config and logs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization for smaller binary
codegen-units = 1    # Single codegen unit for better optimization
panic = "abort"      # Abort on panic (smaller binary)
strip = true         # Strip symbols from binary

[profile.release.build-override]
opt-level = "z"
